--- a/src/js/components/pages/home/home.scss
+++ b/src/js/components/pages/home/home.scss
@@ -1,4 +1,5 @@
 .banner-image {
   background: url("../../../../img/banner.jpg") no-repeat 0 -150px;
-  height: 400px;
+  background-size: cover;
+  height: 600px;
 }
