Fixed mobile css

--- a/src/css/_app.scss
+++ b/src/css/_app.scss
@@ -3,3 +3,11 @@
     padding-top: 64px;
   }
 }
+
+@media screen and (max-width: 599px) {
+  .app {
+    .app-body {
+      padding-top: 56px;
+    }
+  }
+}
