Fixed desktop jumotron

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -5,6 +5,7 @@
     background-image: url('http://res.cloudinary.com/dhahnivds/image/upload/v1528881163/banner_btixti.jpg');
     background-repeat: no-repeat;
     background-size: 100%;
+    background-position: 0 80%;
     position: relative;
     height: calc(100vh - 64px);
     .jumbotron-overlay {
