--- a/src/teams/teams.scss
+++ b/src/teams/teams.scss
@@ -32,11 +32,10 @@
       font-size: 24px;
       text-align: center;
       position: absolute;
+      width: 100%;
       bottom: 100px;
-      left: 5%;
-      width: 90%;
       padding: 12px 0;
-      transform: rotate(-15deg);
+      transform: skewY(-15deg);
     }
   }
 }
